--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -163,13 +163,12 @@ button {
 .app-actions {
   position: fixed;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   bottom: 2%;
   right: 2%;
   width: 125px;
   height: 50px;
 
-  &__bg,
   &__music {
     display: grid;
     place-items: center;
@@ -483,6 +482,10 @@ button {
       border-radius: 50%;
       animation: overfill 1s ease alternate;
     }
+
+    &:hover {
+      background-color: transparent !important;
+    }
   }
 
   &--missed {
@@ -516,7 +519,12 @@ button {
       border-radius: 50%;
       animation: overfill 1s ease alternate;
     }
+
+    &:hover {
+      background-color: transparent !important;
+    }
   }
+
 }
 
 //* Ship on board styles
