--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -223,14 +223,27 @@ button {
   justify-content: space-around;
 }
 
-.enemy-status {
+.player-status {
   z-index: 1111;
   color: $color-light;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  font-size: 1.4rem;
+  font-size: 1.25rem;
   padding-top: 1rem;
+  display: none;
+  margin: 2rem 0;
+
+  &--start {
+    display: block;
+    margin: 0;
+  }
+
+  &__nick {
+    color: $color-light;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
 
   &__connected,
   &__ready {
@@ -238,7 +251,7 @@ button {
     align-items: center;
     margin: auto;
     justify-content: space-between;
-    width: 170px;
+    width: 150px;
   }
 }
 ///////////////////////////////////////////////////////////////
