--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -254,6 +254,11 @@ button {
     width: 150px;
   }
 }
+
+.player-accepted {
+  font-size: 2rem;
+  color: $color-light;
+}
 ///////////////////////////////////////////////////////////////
 //* Board
 
