--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -58,6 +58,10 @@ button {
   text-align: center;
   padding-top: 5rem;
   letter-spacing: 0.5rem;
+
+  @media only screen and (max-width: 500px) {
+    font-size: 3rem;
+  }
 }
 
 .form-wrapper {
@@ -71,6 +75,10 @@ button {
   top: 30%;
   left: 50%;
   transform: translateX(-50%);
+
+  @media only screen and (max-width: 600px) {
+    padding: 2rem 5rem;
+  }
 }
 
 .form {
@@ -81,6 +89,10 @@ button {
 
   &__header {
     font-size: 2.8rem;
+
+    @media only screen and (max-width: 600px) {
+      font-size: 2.2rem;
+    }
   }
 
   &__username {
@@ -105,6 +117,12 @@ button {
       border-bottom: 5px solid transparent;
       transition: border-bottom 150ms ease-out;
 
+      @media only screen and (max-width: 600px) {
+        font-size: 1.2rem;
+        width: 250px;
+        height: 40px;
+      }
+
       &:focus {
         outline: none;
         border-bottom: 5px solid #3c3f43;
@@ -125,6 +143,12 @@ button {
       place-items: center;
       cursor: pointer;
       margin-bottom: 2rem;
+
+      @media only screen and (max-width: 600px) {
+        font-size: 1.2rem;
+        width: 250px;
+        height: 40px;
+      }
     }
 
     input {
@@ -199,7 +223,7 @@ button {
     color: $color-warning;
 
     @media only screen and (max-width: 700px) {
-      font-size: 1rem;
+      font-size: 1.5rem;
       padding: 0;
     }
   }
