player status update

--- a/public/assets/styles/main.scss
+++ b/public/assets/styles/main.scss
@@ -251,6 +251,7 @@ button {
 .player-accepted {
   font-size: 2rem;
   color: $color-light;
+  text-align: center;
 }
 ///////////////////////////////////////////////////////////////
 //* Board
